syntax = "proto2";

option go_package = "./;testproto";

message Proto2 {
  optional bool bool_value = 1;
  optional int32 int32_val = 2;
  optional uint32 uint32_val = 3;
  optional int64 int64_val = 4;
  optional uint64 uint64_val = 5;
  optional float float_val = 6;
  optional double double_val = 7;
  optional string string_val = 8;
  optional bytes bytes_val = 9;
  optional fixed32 fixed32_val = 10;
  optional fixed64 fixed64_val = 11;
}